# treecrdt

./: .clippy.toml  .gitignore  .gitmodules  .prettierignore  Cargo.toml  LICENSE  README.md  buf.gen.yaml  buf.work.yaml  em-proposal.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json
.changeset/: abortable-sync-once.md  atomic-local-auth-proof-handoff.md  auth-known-state-signatures.md  auth-materialization-bridge.md  authored-at-op-auth-claims.md  calm-images-arrive.md  causal-children-filters.md  clarify-ops-since.md  clean-inbound-sync.md  clean-outbound-sync.md  config.json  direct-opfs-vfs.md  effective-payload-delete.md  fail-closed-capability-cwt.md  fail-closed-children-redaction.md  fail-closed-oplog-projection.md  fail-closed-outbound-auth.md  fail-closed-scoped-writes.md  fuzzy-pumpkins-share.md  harden-order-key-allocation.md  inbound-sync-batch-yield.md  initial-npm-release.md  isolate-materialization-listeners.md  keep-reserved-sentinels-virtual.md  local-auth-signer.md  net-materialization-outcomes.md  opfs-single-owner-wal.md  opfs-writeahead-vfs.md  optimistic-sqlite-local-auth.md  per-change-write-ids.md  preserve-empty-sqlite-payloads.md  quiet-release-check.md  quiet-sockets-fail.md  reject-operation-id-equivocation.md  safe-canonical-replay.md  separate-wa-sqlite-auth.md  serialized-sqlite-materialization.md  shared-worker-materialized-fastpath.md  shared-worker-priority-scheduler.md  shared-worker-terminal-lifecycle.md  (+15 more)
benchmarks/: summary.json  summary.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  wa-sqlite.md  (+3 more)
(+210 files in other folders)
