[workspace]
members = [
  "packages/treecrdt-core",
  "packages/treecrdt-postgres-napi/native-rs",
  "packages/treecrdt-postgres-rs",
  "packages/treecrdt-riblt-wasm",
  "packages/treecrdt-sqlite-ext",
  "packages/treecrdt-wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.0.1"
authors = ["Cybersemics Institute"]
description = "Workspace for TreeCRDT core, SQLite extension, and bindings."

# Workspace-wide lint configuration
# Note: Lint levels can be configured here, but Clippy-specific settings
# are in .clippy.toml. For strict linting, use command-line flags in CI.
